fix: icon-list icon top set to 0 for GillSans alignment

--- a/src/assets/scss/_user-variables.scss
+++ b/src/assets/scss/_user-variables.scss
@@ -37,7 +37,7 @@ $line-height-base:       1.6;      // (было: 1.7)
 
 // Коррекция под GillSans (метрики отличаются от Manrope)
 $unordered-list-dot-top: 0;
-$icon-list-icon-top:    -0.05rem;
+$icon-list-icon-top:     0;
 $icon-list-bg-top:       0.25rem;
 
 // Display заголовки (−10% для компенсации uppercase)
